--- a/html/index.html
+++ b/html/index.html
@@ -3,10 +3,52 @@
     <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" type="text/css" href="../css/default.css"/>
+            <link rel="stylesheet" type="text/css" href="../css/indexGrid.css/"/>
+            <link rel="stylesheet" type="text/css" href="../css/index.css"/>
     </head>
     <body>
+        <div id="Wrapper">
+            <div id="Header">
+                <nav id="NavBar">
+                    <a id="Button-1" class="navLink">
+                        <button class="navButton button">
+                            <p>Reverse String</p>
+                        </button>
+                    </a>
 
+                    <a id="Button-2" class="navLink">
+                        <button class="navButton button">
+                            <p>Days to Christams</p>
+                        </button>
+                    </a>
 
+                    <a id="Button-3" class="navLink">
+                        <button class="navButton button">
+                            <p>Guss the Number</p>
+                        </button>
+                    </a>
+
+                    <a id="Button-4" class="navLink">
+                        <button class="navButton button">
+                            <p>Closest to hundred</p>
+                        </button>
+                    </a>
+
+                    <a id="Button-5" class="navLink">
+                        <button class="navButton button">
+                            <p>String addon</p>
+                        </button>
+                    </a>
+                </nav>
+            </div>
+            <div id="Content">
+
+            </div>
+            <footer id="Footer">
+                <p id="Copyright">© Tobias Olsson</p>
+            </footer>
+        </div>
     </body>
-    <script src="../js/reverseString.js"></script> 
+    <!--<script src="../js/reverseString.js"></script> -->
 </html>
