--- a/html/index.html
+++ b/html/index.html
@@ -20,19 +20,19 @@
                     </a>
 
                     <a id="Button-2" class="navLink">
-                        <button class="navButton button">
+                        <button class="navButton button wide">
                             <p>Days to Christams</p>
                         </button>
                     </a>
 
                     <a id="Button-3" class="navLink">
-                        <button class="navButton button">
+                        <button class="navButton button wide">
                             <p>Guss the Number</p>
                         </button>
                     </a>
 
                     <a id="Button-4" class="navLink">
-                        <button class="navButton button">
+                        <button class="navButton button wide">
                             <p>Closest to hundred</p>
                         </button>
                     </a>
