Added referenses to JS files.

--- a/html/index.html
+++ b/html/index.html
@@ -57,5 +57,9 @@
             </footer>
         </div>
     </body>
-    <!--<script src="../js/reverseString.js"></script> -->
+    <script src="../js/closestToHundred.js"></script>
+    <script src="../js/daysToChristams.js"></script>
+    <script src="../js/gussTheNumber.js"></script>
+    <script src="../js/reverseString.js"></script>
+    <script src="../js/ButtonClickEvent.js"></script>
 </html>
