Setting up a dynamic enviroment. For accsessing the diffrent lab requierments.

--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,9 @@
             </div>
             <div id="Middle-Container">
                 <div id="Site-Content">
-
+                    <div>
+                        <p id="GetReversedString"></p>
+                    </div>
                 </div>
                 <!-- The Banner divs holds potential content to the edge of the screen. That is not related to the pages purpose.-->
                 <div id="Banner-Left"></div>
