fixed the animation overide bug

--- a/html/index.html
+++ b/html/index.html
@@ -14,31 +14,31 @@
             <div id="Top-Container">
                 <nav id="NavBar">
                     <a id="Button-1" class="navLink" onclick="ReverseString(GetReversedString)">
-                        <button class="navButton button">
+                        <button class="navButton button-small ">
                             <p>Reverse String</p>
                         </button>
                     </a>
 
                     <a id="Button-2" class="navLink" onclick="GetDaysToChristmas()">
-                        <button class="navButton button wide">
+                        <button class="navButton button-wide">
                             <p>Days to Christams</p>
                         </button>
                     </a>
 
                     <a id="Button-3" class="navLink">
-                        <button class="navButton button wide">
+                        <button class="navButton button-wide">
                             <p>Guss the Number</p>
                         </button>
                     </a>
 
                     <a id="Button-4" class="navLink">
-                        <button class="navButton button wide">
+                        <button class="navButton button-wide">
                             <p>Closest to hundred</p>
                         </button>
                     </a>
 
                     <a id="Button-5" class="navLink">
-                        <button class="navButton button">
+                        <button class="navButton button-small">
                             <p>String addon</p>
                         </button>
                     </a>
