Days to christmas don & working on new content layout. Next labb almost don.

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
                         </button>
                     </a>
 
-                    <a id="Button-2" class="navLink" onclick="GetDaysToChristmas()">
+                    <a id="Button-2" class="navLink" onclick="CountDaysToNextChristmas(GetDaysToChristams)">
                         <button class="navButton button-wide">
                             <p>Days to Christams</p>
                         </button>
@@ -46,22 +46,23 @@
             </div>
             <div id="Middle-Container">
                 <div id="Site-Content">
-                    <div>
+                    <div id="item-1" class="item">
                         <p id="GetReversedString">Lexicon</p>
                     </div>
-                    <div>
-                        <p id="GetDaysToChristams">Remaning days to 24 december:</p>
+                    <div id="item-2" class="item">
+                        <p>Remaning days to 24 december:</p>
+                        <p id="GetDaysToChristams"></p>
                     </div>
-                    <div>
+                    <div id="item-3" class="item">
                         <p id="GetClosestNumTo100">Lexicon</p>
                     </div>
-                    <div>
+                    <div id="item-4" class="item">
                         <p id="GetGuessTheNumber">Guss the number</p>
                     </div>
-                    <div>
+                    <div id="item-5" class="item">
                         <p id="GetStringExtension">Lexicon</p>
-                    </div>
-                </div>
+                    </div>  
+                </div><!--END: Site-Container-->
                 <!-- The Banner divs holds potential content to the edge of the screen. That is not related to the pages purpose.-->
                 <div id="Banner-Left"></div>
                 <div id="Banner-Right"></div>
