--- a/html/index.html
+++ b/html/index.html
@@ -54,13 +54,13 @@
                         <p id="GetDaysToChristams"></p>
                     </div>
                     <div id="item-3" class="item">
-                        <p id="GetClosestNumTo100">Lexicon</p>
+                        <p id="GetGuessTheNumber">Guss the number!</p>
                     </div>
                     <div id="item-4" class="item">
-                        <p id="GetGuessTheNumber">Guss the number</p>
+                        <p id="GetClosestNumTo100">Close to 100:</p>
                     </div>
                     <div id="item-5" class="item">
-                        <p id="GetStringExtension">Lexicon</p>
+                        <p id="GetStringExtension">Attach string to string.</p>
                     </div>  
                 </div><!--END: Site-Container-->
                 <!-- The Banner divs holds potential content to the edge of the screen. That is not related to the pages purpose.-->
