--- a/html/index.html
+++ b/html/index.html
@@ -47,14 +47,19 @@
             <div id="Middle-Container">
                 <div id="Site-Content">
                     <div id="item-1" class="item">
-                        <p id="GetReversedString">Lexicon</p>
+                        <h1 id="GetReversedString">Lexicon</h1>
                     </div>
                     <div id="item-2" class="item">
-                        <p>Remaning days to 24 december:</p>
+                        <h2>Remaning days to the 24 of december:</h2>
                         <p id="GetDaysToChristams"></p>
                     </div>
                     <div id="item-3" class="item">
-                        <p id="GetGuessTheNumber">Guss the number!</p>
+                        <p id="GetGuessTheNumber">Guess the number!</p>
+                        <form>
+                            <p>Enter number:</p>
+                            <input type="text">
+                            <input type="submit">
+                        </form>
                     </div>
                     <div id="item-4" class="item">
                         <p id="GetClosestNumTo100">Close to 100:</p>
@@ -71,11 +76,6 @@
                 <p id="Copyright">© Tobias Olsson</p>
             </footer>
         </div>
-    <!--<script src="../js/closestToHundred.js"></script>
-    <script src="../js/daysToChristams.js"></script>
-    <script src="../js/gussTheNumber.js"></script>
-    <script src="../js/StringExtension.js"></script>-->
-    <script src="../js/reverseString.js"></script>
-    <script src="../js/ButtonClickEvent.js"></script>
+        <script src="../js/ButtonClickEvent.js"></script>
     </body>
 </html>
