Labb DON, syling remaning.

--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
                         </button>
                     </a>
                     
-                    <a id="Button-4" class="navLink" onclick="NearesetTo100()">
+                    <a id="Button-4" class="navLink" onclick="NearestTo100()">
                         <button class="navButton button-wide">
                             <p>Closest to hundred</p>
                         </button>
@@ -50,7 +50,7 @@
                         <h1 id="GetReversedString">Lexicon</h1>
                     </div>
                     <div id="item-2" class="item">
-                        <p id="GetGuessTheNumber">Guess the number!</p>
+                        <h3>Guess the number!</h3>
                         <form>
                             <p>Enter number:</p>
                             <input id="text" type="text">
@@ -59,7 +59,7 @@
                     </div>
                     <div id="item-3" class="item">
                         <h2>Remaning days to the 24 of december:</h2>
-                        <p id="GetDaysToChristams"></p>
+                        <h2 id="GetDaysToChristams"></h2>
                     </div>
                     <div id="item-4" class="item">
                         <h3>Attach string to string.</h3>
@@ -73,9 +73,9 @@
                         <h3>Close to 100:</h3>
                         <form>
                             <p>Enter a number.</p>
-                            <input id="value1" type="text">
+                            <input id="Value1" type="number">
                             <p>Enter a number.</p>
-                            <input id="value2" type="text">
+                            <input id="Value2" type="number">
                         </form>
                         <p id="GetClosests"></p>
                     </div>
@@ -89,6 +89,7 @@
             </footer>
         </div>
         <script src="../js/StringExtension.js"></script>
+        <script src="../js/near100.js"></script>
         <script src="../js/ButtonClickEvent.js"></script>
     </body>
 </html>
