--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
                         </button>
                     </a>
 
-                    <a id="Button-2" class="navLink" onclick="CountDaysToNextChristmas()">
+                    <a id="Button-2" class="navLink" onclick="GetDaysToChristmas()">
                         <button class="navButton button-wide">
                             <p>Days to Christams</p>
                         </button>
@@ -88,6 +88,8 @@
                 <p id="Copyright">© Tobias Olsson</p>
             </footer>
         </div>
+        <script src="../js/gussTheNumber.js"></script>
+        <script src="../js/daysToChristams.js"></script>
         <script src="../js/StringExtension.js"></script>
         <script src="../js/near100.js"></script>
         <script src="../js/ButtonClickEvent.js"></script>
