--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
                         </button>
                     </a>
 
-                    <a id="Button-2" class="navLink" onclick="GetDaysToChristmas()">
+                    <a id="Button-2" class="navLink" onclick="CountDaysToNextChristmas()">
                         <button class="navButton button-wide">
                             <p>Days to Christams</p>
                         </button>
